PLABE-1287 support Gradle 9.1.0 (pull request #37)
Approved-by: Mateusz Rzeszutek