@@ -1,46 +1,33 @@
-import com.github.benmanes.gradle.versions.updates.gradle.GradleReleaseChannel.CURRENT
 import com.gradle.publish.PublishTask
 import org.gradle.api.tasks.testing.logging.TestExceptionFormat.FULL
 import org.gradle.api.tasks.testing.logging.TestLogEvent.FAILED
 import org.gradle.api.tasks.testing.logging.TestLogEvent.PASSED
 import org.gradle.api.tasks.wrapper.Wrapper.DistributionType.ALL
+import org.gradle.kotlin.dsl.withType
 import java.net.URI
 
 plugins {
     groovy
+    `jvm-test-suite`
     `kotlin-dsl`
-    id("com.gradle.plugin-publish").version("1.2.1")
-    id("com.github.ben-manes.versions").version("0.51.0")
+    id("com.gradle.plugin-publish").version("2.0.0")
     if (System.getenv().containsKey("TRAVIS") || !System.getenv().containsKey("CI")) {
         id("pl.droidsonroids.jacoco.testkit").version("1.0.12")
     }
 }
+
+group = "com.revolut.jooq"
+version = "0.3.13-SNAPSHOT"
 
 repositories {
     mavenCentral()
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_17
-    targetCompatibility = JavaVersion.VERSION_17
-}
-
-group = "com.revolut.jooq"
-version = "0.3.13-SNAPSHOT"
-
-gradlePlugin {
-    website.set("https://github.com/revolut-engineering/jooq-plugin")
-    vcsUrl.set("https://github.com/revolut-engineering/jooq-plugin")
-
-    plugins {
-        register("jooqDockerPlugin") {
-            id = "com.revolut.jooq-docker"
-            implementationClass = "com.revolut.jooq.JooqDockerPlugin"
-            description = "Generates jOOQ classes using dockerized database"
-            displayName = "jOOQ Docker Plugin"
-            tags = setOf("jooq", "docker", "db")
-            version = project.version
-        }
+    withSourcesJar()
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(17))
+        vendor.set(JvmVendorSpec.ADOPTIUM)
     }
 }
 
@@ -54,21 +41,6 @@ publishing {
 }
 
 tasks {
-    withType<Test>().configureEach {
-        useJUnitPlatform()
-        if (JavaVersion.current().isJava9Compatible) {
-            jvmArgs("--add-opens", "java.base/java.lang.invoke=ALL-UNNAMED")
-            jvmArgs("--illegal-access=deny")
-        }
-        testLogging {
-            events(PASSED, FAILED)
-            showExceptions = true
-            showStackTraces = true
-            showCauses = true
-            exceptionFormat = FULL
-        }
-    }
-
     withType<JacocoReport> {
         reports {
             xml.required = true
@@ -86,24 +58,8 @@ tasks {
         onlyIf("publishing release to the Gradle Plugin Portal") { !isSnapshot }
     }
 
-    dependencyUpdates {
-        resolutionStrategy {
-            componentSelection {
-                all {
-                    val rejected = listOf("alpha", "beta", "b", "rc", "cr", "m", "preview")
-                        .map { qualifier -> Regex("(?i).*[.-]$qualifier[.\\d-]?.*") }
-                        .any { it.matches(candidate.version) }
-                    if (rejected) {
-                        reject("Release candidate")
-                    }
-                }
-            }
-        }
-        gradleReleaseChannel = CURRENT.id
-    }
-
     wrapper {
-        gradleVersion = "8.6"
+        gradleVersion = "9.1.0"
         distributionType = ALL
     }
 }
@@ -120,12 +76,84 @@ afterEvaluate {
 
 dependencies {
     implementation("org.jooq:jooq-codegen:3.14.15")
-    implementation("org.glassfish.jaxb:jaxb-runtime:2.3.3")
     implementation("com.github.docker-java:docker-java-transport-okhttp:3.6.0")
     implementation("org.flywaydb:flyway-core:6.4.3")
     implementation("org.zeroturnaround:zt-exec:1.12")
     compileOnly("javax.annotation:javax.annotation-api:1.3.2")
 
-    testImplementation("org.spockframework:spock-core:2.3-groovy-3.0")
+    testImplementation("org.spockframework:spock-core:2.3-groovy-4.0")
     testCompileOnly(gradleTestKit())
+}
+
+testing {
+    suites {
+        @Suppress("UnstableApiUsage")
+        withType<JvmTestSuite>().configureEach {
+            useJUnitJupiter()
+            dependencies {
+                implementation(project())
+                implementation(platform("io.kotest:kotest-bom:5.9.1"))
+                implementation("io.kotest:kotest-assertions-core-jvm")
+            }
+
+            targets.configureEach {
+                testTask {
+                    testLogging {
+                        events(PASSED, FAILED)
+                        showExceptions = true
+                        showStackTraces = true
+                        showCauses = true
+                        exceptionFormat = FULL
+                    }
+                }
+            }
+        }
+
+        @Suppress("UnstableApiUsage")
+        val test by existing(JvmTestSuite::class)
+
+        @Suppress("UnstableApiUsage")
+        val testFunctional by registering(JvmTestSuite::class) {
+            dependencies {
+                implementation(gradleTestKit())
+            }
+
+            targets.configureEach {
+                testTask.configure {
+                    shouldRunAfter(test)
+                }
+            }
+            targets.register("${name}OnJava21") {
+                testTask.configure {
+                    javaLauncher.set(
+                        javaToolchains.launcherFor {
+                            languageVersion.set(JavaLanguageVersion.of(21))
+                            vendor.set(java.toolchain.vendor)
+                        },
+                    )
+                }
+            }
+        }
+
+        tasks.check {
+            dependsOn(testFunctional.map { it.targets.named(it.name) })
+        }
+    }
+}
+
+gradlePlugin {
+    website.set("https://github.com/revolut-engineering/jooq-plugin")
+    vcsUrl.set("https://github.com/revolut-engineering/jooq-plugin")
+
+    plugins {
+        register("jooqDockerPlugin") {
+            id = "com.revolut.jooq-docker"
+            implementationClass = "com.revolut.jooq.JooqDockerPlugin"
+            description = "Generates jOOQ classes using dockerized database"
+            displayName = "jOOQ Docker Plugin"
+            tags = setOf("jooq", "docker", "db")
+            version = project.version
+        }
+        testSourceSets(sourceSets["test"], sourceSets["testFunctional"])
+    }
 }
